// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinnaSelect component renders correctly with required props set 1`] = `
"<div class=\\"pos-r dif f-col  \\"><input id=\\"test-select\\" class=\\"select\\" tabindex=\\"0\\" placeholder=\\"Choose...\\" readonly=\\"\\" aria-haspopup=\\"listbox\\">
  <div class=\\"select-caret\\"></div>

  <div class=\\"select-listbox hide\\" role=\\"listbox\\"><div class=\\"option  option-active\\" value=\\"au\\" role=\\"option\\">Australia</div><div class=\\"option  \\" value=\\"cn\\" role=\\"option\\">China</div><div class=\\"option  \\" value=\\"jp\\" role=\\"option\\">Japan</div><div class=\\"option  \\" value=\\"kr\\" role=\\"option\\">Korea</div><div class=\\"option  \\" value=\\"other\\" role=\\"option\\">Other / Unknown</div>
    </div></div>"
`;

exports[`MinnaSelect component renders with disabled prop 1`] = `
"<div class=\\"pos-r dif f-col select-disabled \\"><input id=\\"test-select\\" class=\\"select\\" tabindex=\\"-1\\" placeholder=\\"Choose...\\" readonly=\\"\\" disabled=\\"\\" aria-haspopup=\\"listbox\\">
  <div class=\\"select-caret\\"></div>

  <div class=\\"select-listbox hide\\" role=\\"listbox\\"><div class=\\"option  option-active\\" value=\\"au\\" role=\\"option\\">Australia</div><div class=\\"option  \\" value=\\"cn\\" role=\\"option\\">China</div><div class=\\"option  \\" value=\\"jp\\" role=\\"option\\">Japan</div><div class=\\"option  \\" value=\\"kr\\" role=\\"option\\">Korea</div><div class=\\"option  \\" value=\\"other\\" role=\\"option\\">Other / Unknown</div>
    </div></div>"
`;

exports[`MinnaSelect component renders with filterHelp prop 1`] = `
"<div class=\\"pos-r dif f-col  select-active\\"><input id=\\"test-select\\" class=\\"select\\" tabindex=\\"0\\" placeholder=\\"Filter me\\" aria-haspopup=\\"listbox\\">
  <div class=\\"select-caret\\"></div>

  <div class=\\"select-listbox \\" role=\\"listbox\\"><div class=\\"option  option-active\\" value=\\"au\\" role=\\"option\\">Australia</div><div class=\\"option  \\" value=\\"cn\\" role=\\"option\\">China</div><div class=\\"option  \\" value=\\"jp\\" role=\\"option\\">Japan</div><div class=\\"option  \\" value=\\"kr\\" role=\\"option\\">Korea</div><div class=\\"option  \\" value=\\"other\\" role=\\"option\\">Other / Unknown</div>
    </div></div>"
`;

exports[`MinnaSelect component renders with filterable prop set to false 1`] = `
"<div class=\\"pos-r dif f-col  select-active\\"><input id=\\"test-select\\" class=\\"select\\" tabindex=\\"0\\" placeholder=\\"Choose...\\" readonly=\\"\\" aria-haspopup=\\"listbox\\">
  <div class=\\"select-caret\\"></div>

  <div class=\\"select-listbox \\" role=\\"listbox\\"><div class=\\"option  option-active\\" value=\\"au\\" role=\\"option\\">Australia</div><div class=\\"option  \\" value=\\"cn\\" role=\\"option\\">China</div><div class=\\"option  \\" value=\\"jp\\" role=\\"option\\">Japan</div><div class=\\"option  \\" value=\\"kr\\" role=\\"option\\">Korea</div><div class=\\"option  \\" value=\\"other\\" role=\\"option\\">Other / Unknown</div>
    </div></div>"
`;

exports[`MinnaSelect component renders with placeholder prop 1`] = `
"<div class=\\"pos-r dif f-col  \\"><input id=\\"test-select\\" class=\\"select\\" tabindex=\\"0\\" placeholder=\\"Hold your places\\" readonly=\\"\\" aria-haspopup=\\"listbox\\">
  <div class=\\"select-caret\\"></div>

  <div class=\\"select-listbox hide\\" role=\\"listbox\\"><div class=\\"option  option-active\\" value=\\"au\\" role=\\"option\\">Australia</div><div class=\\"option  \\" value=\\"cn\\" role=\\"option\\">China</div><div class=\\"option  \\" value=\\"jp\\" role=\\"option\\">Japan</div><div class=\\"option  \\" value=\\"kr\\" role=\\"option\\">Korea</div><div class=\\"option  \\" value=\\"other\\" role=\\"option\\">Other / Unknown</div>
    </div></div>"
`;

exports[`MinnaSelect component renders with readonly prop 1`] = `
"<div class=\\"pos-r dif f-col  \\"><input id=\\"test-select\\" class=\\"select\\" tabindex=\\"0\\" placeholder=\\"Choose...\\" readonly=\\"\\" aria-haspopup=\\"listbox\\">
  <div class=\\"select-caret\\"></div>

  <div class=\\"select-listbox hide\\" role=\\"listbox\\"><div class=\\"option  option-active\\" value=\\"au\\" role=\\"option\\">Australia</div><div class=\\"option  \\" value=\\"cn\\" role=\\"option\\">China</div><div class=\\"option  \\" value=\\"jp\\" role=\\"option\\">Japan</div><div class=\\"option  \\" value=\\"kr\\" role=\\"option\\">Korea</div><div class=\\"option  \\" value=\\"other\\" role=\\"option\\">Other / Unknown</div>
    </div></div>"
`;

exports[`MinnaSelect component renders with value set 1`] = `
"<div class=\\"pos-r dif f-col  \\"><input id=\\"test-select\\" class=\\"select\\" tabindex=\\"0\\" placeholder=\\"Choose...\\" readonly=\\"\\" aria-haspopup=\\"listbox\\">
  <div class=\\"select-caret\\"></div>

  <div class=\\"select-listbox hide\\" role=\\"listbox\\"><div class=\\"option  \\" value=\\"au\\" role=\\"option\\">Australia</div><div class=\\"option  \\" value=\\"cn\\" role=\\"option\\">China</div><div class=\\"option  option-active\\" value=\\"jp\\" role=\\"option\\">Japan</div><div class=\\"option  \\" value=\\"kr\\" role=\\"option\\">Korea</div><div class=\\"option  \\" value=\\"other\\" role=\\"option\\">Other / Unknown</div>
    </div></div>"
`;

exports[`MinnaSelect component typing in input filters the shown items 1`] = `
Array [
  Object {
    "id": "kr",
    "text": "Korea",
  },
  Object {
    "id": "other",
    "text": "Other / Unknown",
  },
]
`;
